# cucopy

./: .gitignore  LICENSE  MANIFEST.in  README.md  notes  requirements.txt  run.py  setup.cfg  setup.py
cucopy/: __init__.py  config.py  currency.py  manage.py  parser.py  tools.py
cucopy/components/: exchange.py  inflation.py  settings.py  update.py  utils.py
cucopy/data/: ConsumerPriceIndex.csv  ExchangeRate_LCU_per_USD.csv  _CurrencyYield.csv  cpi.csv
cucopy/data/de/: BBDP1.M.DE.N.VPI.C.A00000.I15.A.csv  BBDP1.M.DE.N.VPI.C.C2C011.I15.A.csv
cucopy/data/en/: BBDP1.M.DE.N.VPI.C.A00000.I15.A.csv
docs/: conf.py
docs/_build/doctrees/: cucopy.doctree  environment.pickle  index.doctree  modules.doctree  setup.doctree
docs/_build/html/: .buildinfo  cucopy.html  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  setup.html
docs/_build/html/_sources/: cucopy.rst.txt  index.rst.txt  modules.rst.txt
test/: test_exchange.py
