[metadata]
name = cucopy
version = 0.1.4
author = Julian Schönau
author_email = schoenau.julian@gmail.com
description = Module for deflating and exchanging currencies.
long_description = file : README.md
long_description_content_type = text/markdown
url = https://github.com/OfficialCodexplosive/cucopy
classifiers = 
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires = 
    python-dateutil
    pandas
python_requires = >=3.7
include_package_data = True